methods.picture.MethodsPicture.scala.error
Compilation error:
MethodsPicture:1: error: not found: type color
def marquer (c:color) = {setCouleurBrosse(c);baisseBrosse();leveBrosse()}
               ^MethodsPicture:2: error: not found: type color
def faireV (c:color) = {
              ^